--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,47 @@
-fastapi
-pymongo
-uvicorn
+asgiref==3.4.1
+attrs==21.2.0
+certifi==2021.5.30
+charset-normalizer==2.0.3
+click==7.1.2
+colorama==0.4.4
+colorlog==4.8.0
+commonmark==0.9.1
+dnspython==2.1.0
+email-validator==1.1.3
+fastapi==0.67.0
+flake8==3.9.2
+flake8-polyfill==1.0.2
+future==0.18.2
+gitdb==4.0.7
+GitPython==3.1.18
+h11==0.12.0
+idna==3.2
+ipython-genutils==0.2.0
+jsonschema==3.2.0
+jupyter-core==4.7.1
+mando==0.6.4
+mccabe==0.6.1
+mongomantic==0.4.2
+nbformat==5.1.3
+plotly==4.14.3
+progress==1.4
+pycodestyle==2.7.0
+pydantic==1.8.2
+pyflakes==2.3.1
+Pygments==2.9.0
+pymongo==3.12.0
+pyrsistent==0.18.0
+python-dateutil==2.8.2
+radon==4.0.0
+requests==2.26.0
+retrying==1.3.3
+rich==9.13.0
+six==1.16.0
+smmap==4.0.0
+starlette==0.14.2
+tabulate==0.8.9
+traitlets==5.0.5
+typing-extensions==3.10.0.0
+urllib3==1.26.6
+uvicorn==0.14.0
+wily==1.20.0
