--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,8 @@ jsonschema==3.2.0
 jupyter-core==4.7.1
 mando==0.6.4
 mccabe==0.6.1
+mongoengine==0.23.1
+mongomantic==0.4.2
 nbformat==5.1.3
 plotly==4.14.3
 progress==1.4
