--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,9 @@ jsonschema==3.2.0
 jupyter-core==4.7.1
 mando==0.6.4
 mccabe==0.6.1
+motor==2.3.1
 nbformat==5.1.3
+odmantic==0.3.5
 plotly==4.14.3
 progress==1.4
 pycodestyle==2.7.0
